Banner cut off fix

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -553,7 +553,7 @@ a.firmlink:focus, a.firmlink:hover {
 // Home
 
 .banner{
-    margin-top: 130px;
+    margin-top: 187px;
     background: url("/img/smiling-lady.jpg") no-repeat;
     background-size: cover;
     background-position: center center;
